[gd_scene load_steps=3 format=3 uid="uid://np4xkwo2ppmd"]

[ext_resource type="Script" path="res://scripts/smart_number_entry.gd" id="1_fi6my"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xca8"]
bg_color = Color(0.211765, 0.282353, 0.396078, 1)

[node name="SmartNumberEntry" type="Control"]
custom_minimum_size = Vector2(190, 180)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fi6my")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6xca8")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "[Title]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FormLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Min:"

[node name="MinSpinbox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/MinContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
allow_greater = true

[node name="MaxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FormLabel2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MaxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max:"

[node name="MaxSpinbox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/MaxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
min_value = -1.0
allow_greater = true

[node name="FormContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tag:"

[node name="FormLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
text = "[Tag](s/es)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"
